--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
 
   <body>
     
-    "Hello World, we are software developers!"
+    <header id="header"> 
+      <img src="https://www.logologo.com/logos/lion-logo-simple-line-art-free-logo.jpg" id="header-img">
+      <nav id="nav-bar">
+        <a href="#" class="nav-link">Features</a>
+        <a href="#" class="nav-link">How It Works</a>
+        <a href="#" class="nav-link">Pricing</a>
+      </nav>
+      
+      <iframe id="video" width="893" height="502" src="https://www.youtube.com/embed/FT3ODSg1GFE" title="Introducing iPhone 14 Pro | Apple" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <form id="form">
+        <input id="email" type="email" placeholder="Please enter your email.">
+        <input type="submit" id="submit">
+      </form>
+    </header>
+
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
